--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "deploy": "hardhat run scripts/deploy.ts",
+    "monitor:build": "tsc -p tsconfig.monitor.json",
+    "monitor:start": "node dist/monitor/monitor/index.js"
   },
   "keywords": [],
   "author": "",
