--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.3",
+    "@types/nodemailer": "^6.4.15",
     "chai": "^4.3.7",
     "ethers": "^6.7.1",
     "hardhat": "^2.17.3",
@@ -36,8 +37,8 @@
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
-    "@types/nodemailer": "^6.4.7",
     "@types/web3": "^1.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
     "nodemailer": "^6.9.1",
