--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/web3": "^1.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongodb": "^5.3.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.5.3",
     "nodemailer": "^6.9.1",
     "web3": "^1.9.0"
   }
