--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/web3": "^1.2.2",
+    "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "kleur": "^4.1.5",
     "mongodb": "^5.9.2",
     "mongoose": "^8.5.3",
     "nodemailer": "^6.9.1",
